# grapheno

./: .gitignore  README.md
lib/: Cargo.toml  README.md  block.cbor  tx.cbor
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.priv.cbor  alice.pub.pem
miner/src/: main.rs
node/: Cargo.toml  blockchain.cbor
node/src/: context.rs  database.rs  handler.rs  main.rs  network.rs  util.rs
wallet/: Cargo.toml  wallet_config.toml
wallet/src/: core.rs  main.rs  tasks.rs  ui.rs  util.rs
