[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
btclib = { version = "0.1.0", path = "../lib" }
chrono = "0.4.42"
ciborium = "0.2.2"
dashmap = "6.1.0"
hex = "0.4.3"
lru = "0.12.5"
sled = "0.34"
static_init = "1.0.4"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["v4"] }
